<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/activity_next"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="se.blerand.lab1.NextActivity">

    <TextView
        android:text="name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10px"
        android:textSize="24sp"
        android:id="@+id/textView"
        android:textStyle="normal|bold"
        android:textAllCaps="true"
        android:textColor="#000"/>


    <TextView
        android:text="@string/Tel.no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/t1"
        android:layout_marginTop="14dp" android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
        android:textSize="18sp" android:textStyle="normal|bold"
        android:textColor="@color/colorPrimaryDark"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="Phone number"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_below="@+id/t1" android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>
    <TextView
        android:text="@string/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/t2"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        android:textColor="@color/colorPrimaryDark"
        android:layout_below="@+id/editText" android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>
    <CheckBox
        android:text="@string/hob_1"
        android:onClick="onCheckboxClicked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_centerVertical="true"
        android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
        android:id="@+id/c1"/>
    <CheckBox
        android:text="@string/hob_2"
        android:onClick="onCheckboxClicked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_below="@+id/c1"
        android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
        android:id="@+id/c2"/>
    <CheckBox
        android:text="@string/hob_3"
        android:onClick="onCheckboxClicked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_below="@+id/c2"
        android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
        android:id="@+id/c3"/>
    <Button
        android:text="SAVE"
        android:layout_width="300px"
        android:layout_height="wrap_content"
        android:id="@+id/b2"
        android:background="@color/colorPrimary"
        android:textColor="#000"
        android:textSize="18sp" android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true" android:layout_alignParentEnd="true"/>
    <Button
        android:text="DELETE"
        android:layout_width="300px"
        android:layout_height="wrap_content"
        android:id="@+id/b1"
        android:background="@color/colorPrimaryDark"
        android:textColor="#000"
        android:textSize="18sp"
        android:layout_alignParentBottom="true" 
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>
    <TextView
        android:text="@string/matchable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/t4"
        android:textSize="18sp" android:textStyle="normal|bold"
        android:textColor="@color/colorPrimaryDark"
        android:layout_below="@+id/c3" android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>
    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/t4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/toggle"
        android:textOn="YES"
        android:textOff="NO"
        android:textColor="#000"
        android:disabledAlpha="0.5"
        android:textColorHighlight="@color/colorPrimary"
        android:showText="true"
        android:textStyle="normal|bold"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText2"
        android:layout_below="@+id/t2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="textFilter|textCapSentences"
        android:hint="Tell us about yourself"
        android:ems="10">
    </EditText>
    <TextView
        android:text="@string/hobbies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/t3"
        android:textSize="18sp" android:textStyle="normal|bold"
        android:textColor="@color/colorPrimaryDark"
        android:layout_above="@+id/c1" android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

</RelativeLayout>
